Fix EllipsisMenu misalignment in wide containers (https://github.com/woocommerce/woocommerce-admin/pull/2207)

--- a/plugins/woocommerce-admin/packages/components/src/ellipsis-menu/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/ellipsis-menu/style.scss
@@ -1,4 +1,7 @@
 /** @format */
+.woocommerce-ellipsis-menu {
+	text-align: center;
+}
 
 .woocommerce-ellipsis-menu__toggle {
 	height: 24px;
